# sc2dsu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: autostart.rs  config.rs  dsu.rs  gyro_calibration.rs  main.rs  probe.rs  stats.rs  triton.rs  ui.rs
